# buildAll

./: CHANGELOG.md  LICENSE  README.md  build-all.cabal  flake.nix
src/: Build.hs  CLI.hs  Colour.hs  Flake.hs  Main.hs
